@@ -2,6 +2,9 @@
 
 use 5.008001;
 
+use strict;
+use warnings;
+
 use Test::More tests => 18;
 
 package Foo;
