@@ -2,7 +2,11 @@
 
 use 5.008001;
 
+use strict;
+use warnings;
+
 use Test::More;
-eval "use Test::Pod 1.14";
-plan skip_all => "Test::Pod 1.14 required for testing POD" if $@;
+eval { require Test::Pod; Test::Pod->import() };
+plan skip_all => "Test::Pod required for testing POD" if $@;
+plan skip_all => "Test::Pod 1.14 required for testing POD" if $Test::Pod::VERSION < 1.14;
 all_pod_files_ok();
